tests/NormalTests/paczka1/fuzzy1/85000609.err
Error in line 9: MWpqm6gZV8 A927 17,2
Error in line 14: wPGb S436 59,5
Error in line 27: LMnrugO7A S738 96,3
Error in line 33: S738 S738 368,64
